# chess_programming_platform

./: .gitignore  README.md
apps/web-client/src/pages/GamePage/: GamePage.js
apps/web-client/src/styles/: global.css
services/chess-engine/: CMakeLists.txt  selfplay.csv
services/chess-engine/docs/: Chess Engine_Board_Backend_Analysis.docx  developement.md
services/chess-engine/src/core/: move.hpp  movelist.hpp  types.hpp
services/chess-engine/src/evaluation/: eval.cpp  eval.hpp  eval_abc.hpp
services/chess-engine/src/movegen/: movegen.cpp  movegen.hpp
services/chess-engine/src/openings/: main.cpp  opening_book.cpp  opening_book.h  opening_book_backup.cpp  opening_book_backup.h  zobrist.cpp  zobrist.h
services/chess-engine/src/parsing/: parse.cpp  parse.hpp
services/chess-engine/src/position/: array_board.cpp  array_board.hpp  bb_position.cpp  bb_position.hpp  bitboard.cpp  bitboard.hpp  board.hpp  board_factory.cpp  board_factory.hpp  piece.cpp  piece.hpp  pointer_board.cpp  pointer_board.hpp  position.cpp  position.hpp
services/chess-engine/src/render/: render.cpp  render.hpp
services/chess-engine/src/rules/: rules.cpp  rules.hpp
services/chess-engine/src/scratch/: temp  temp.cpp
services/chess-engine/src/scripts/: benchmark_main.cpp  main.cpp  run_self_play.cpp  test_op.cpp  train.cpp
services/chess-engine/src/search/: search.cpp  search.hpp  search_bb.cpp  search_bb.hpp
services/chess-engine/src/selfplay/: selfplay.cpp  selfplay.hpp
services/frontend/: demo.html
